--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                         href=""> | Nike</a> <a href="">| Criket Shoes</a><a href="">| Forever 21</a> <a href="">| Eye
                         Makeup</a><a href=""> | photo Frames</a><a href="">Punjabi Suits</a>
                 </div>
-                <div class="footer_box2_bott">
+                <div class="footer_box2_bottom">
                     <p>In Case of any concern, <a href="">Contact Us</a></p>
 
                     <p>© 2023 www.myntra.com. All rights reserved.</p>
